<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GECGridLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:columnCount="1"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uprm.gasefficiencycalculator_2990.GasCalculator" 
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/DistanceTextView"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="@string/GasEfficiencyTextViewDistance"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/TextViewMediumSize15" />

    <EditText
        android:id="@+id/KmOrMilesEditText"
        android:layout_width="168dp"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="1"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textColor="#ffffff" >

    </EditText>

    <Spinner
        android:id="@+id/DistanceUnitSpinner"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="1"
        android:entries="@array/DistanceType"
        android:prompt="@string/Distance_Unit_Chooser" />

    <Spinner
        android:id="@+id/GasUnitSpinner"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="3"
        android:entries="@array/GasType"
        android:prompt="@string/Gas_Unit_Chooser" />

    <EditText
        android:id="@+id/GallOrLitEditText"
        android:layout_width="169dp"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="3"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textColor="#ffffff" >
    </EditText>

    <TextView
        android:id="@+id/GasTextView"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:text="@string/GasTextView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/TextViewMediumSize15" />

    <TextView
        android:id="@+id/TotalTextView"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:text="@string/Total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/kmTotalTextView"
        android:layout_width="86dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="7"
        android:background="@android:color/holo_orange_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/milesTotalTextView"
        android:layout_width="86dp"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="7"
        android:background="@android:color/holo_orange_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/kmTextView"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="6"
        android:text="@string/Kilometer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/milesTextView"
        android:layout_width="68dp"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="6"
        android:text="@string/Miles"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TotalDistanceTextView"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="7"
        android:text="@string/Total_Distance"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/gallonTextView"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="8"
        android:text="@string/Gallon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/litersTextView"
        android:layout_width="70dp"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="8"
        android:text="@string/Liters"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TotalGasTextView"
        android:layout_width="94dp"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="9"
        android:text="@string/Total_Gas"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/gallonTotalTextView"
        android:layout_width="86dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="9"
        android:background="@android:color/holo_orange_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/litersTotalTextView"
        android:layout_width="86dp"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="9"
        android:background="@android:color/holo_orange_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/Spacer"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/MilesPerGallonTextView"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="11"
        android:text="@string/mpg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/MilesPerGallonTotalTextView"
        android:layout_width="148dp"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="11"
        android:background="@android:color/holo_green_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/KmPerLiterTextVew"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="13"
        android:text="@string/kmpl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/KmPerLiterTotalTextView"
        android:layout_width="149dp"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="13"
        android:background="@android:color/holo_green_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/Spacer2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="12"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>